log
Sat Mar 28 03:25:48 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c:88:1: error: expected identifier or ‘(’ before ‘}’ token
   88 | }
      | ^
list.c:90:1: error: expected identifier or ‘(’ before ‘}’ token
   90 | }
      | ^
48c928f
Sat Mar 28 03:26:20 PM UTC 2026: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  1|5
total_score: 10/60
e9cc9c6
Sat Mar 28 03:43:40 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
ab7f1ea
